# net-copy

./: Cargo.toml  LICENSE  README.md  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  lib.rs  main.rs  net_copy.rs  proxy.rs  recv.rs  send.rs
src/html/: upload.html
