[package]
authors = ["baitian <919600234@qq.com>"]
categories = ["command-line-utilities"]
description = "A simple command line tool to transfer files with HTTP"
edition = "2021"
homepage = "https://github.com/baitian752/net-copy"
license = "MIT"
name = "net-copy"
repository = "https://github.com/baitian752/net-copy"
version = "0.1.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ncp"
path = "src/main.rs"

[dependencies]
bufstream = "0.1"
clap = { version = "4.1", features = ["derive"] }
ctrlc = "3.2"
default-net = "0.12"
home = "0.5"
indicatif = "0.17"
mime_guess = "2.0"
portpicker = "0.1"
rand = "0.8"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
toml = "0.7"
