[package]
authors = ["baitian <919600234@qq.com>"]
categories = ["command-line-utilities"]
description = "A simple command line tool to transfer files with HTTP"
edition = "2024"
homepage = "https://github.com/baitian752/net-copy"
license = "MIT"
name = "net-copy"
repository = "https://github.com/baitian752/net-copy"
version = "0.2.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ncp"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
bufstream = "0.1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
default-net = "0.22"
home = "0.5"
indicatif = "0.18"
mime_guess = "2.0"
portpicker = "0.1"
rand = "0.9"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
tar = "0.4"
toml = "0.9"
